fixed navbar z-index being higher than modal content in recipe browser

--- a/src/components/BottomNav/BottomNav.css
+++ b/src/components/BottomNav/BottomNav.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-around;
   padding: 0.3rem 0;
-  z-index: 100;
+  z-index: 10;
 }
 
 .nav-item {
