--- a/src/components/RecipeTileList/RecipeTileList.css
+++ b/src/components/RecipeTileList/RecipeTileList.css
@@ -29,7 +29,7 @@
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 100;
 }
 .modal-content {
   background: #242424;
